name:                hsrelp
version:             0.1.1.1
synopsis:            RELP (Reliable Event Logging Protocol) server implementation
description:         
  The specification of the RELP protocol:
  <http://www.rsyslog.com/doc/relp.html>

homepage:            https://github.com/verrens/hsrelp
bug-reports:         https://github.com/verrens/hsrelp/issues
license:             BSD3
license-file:        LICENSE
author:              Denis Afonin <verrens@yandex.ru>
maintainer:          Denis Afonin <verrens@yandex.ru>
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  -- other-modules:       
  -- other-extensions:    
  build-depends:    base >= 4 && < 5,
                    network >= 3.0,
                    network-bsd >= 2.8,
                    bytestring,
                    utf8-string,
                    attoparsec
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:  Network.RELP.Server

Source-repository head
  Type:     git
  Location: https://github.com/verrens/hsrelp
