cabal-version:       3.4
name:                hsrelp
version:             0.1.3.2
synopsis:            RELP (Reliable Event Logging Protocol) server implementation
description:         
  The specification of the RELP protocol:
  <http://www.rsyslog.com/doc/relp.html>

homepage:            https://github.com/verrens/hsrelp
bug-reports:         https://github.com/verrens/hsrelp/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Denis Afonin <verrens@yandex.ru>
maintainer:          Denis Afonin <verrens@yandex.ru>
category:            Network
build-type:          Simple
-- extra-source-files:  

common warnings
    ghc-options: -Wall

library
  import: warnings
  -- other-modules:       
  -- other-extensions:    
  build-depends:    base >= 4 && < 5,
                    attoparsec >= 0.14.4 && < 0.15,
                    bytestring >= 0.11.5 && < 0.13,
                    utf8-string >= 1.0.2 && < 1.1,
                    network >= 3.1.4 && < 3.3,
                    exceptions >= 0.10.7 && < 0.11,
                    network-bsd >= 2.8.1 && < 2.9,
                    network-simple-tls >= 0.4.2 && < 0.5,
                    tls >= 2.1.5 && < 2.2,
                    crypton >= 1.0.1 && < 1.1,
                    crypton-x509 >= 1.7.7 && < 1.8,
                    crypton-x509-store >= 1.6.9 && < 1.7
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:  Network.RELP.Server

Source-repository head
  Type:     git
  Location: https://github.com/verrens/hsrelp
